@@ -295,6 +295,8 @@ namespace libtorrent
 		std::vector<pending_block> const& request_queue() const;
 		std::vector<peer_request> const& upload_queue() const;
 
+		void clear_request_queue();
+
 		// estimate of how long it will take until we have
 		// received all piece requests that we have sent
 		// if extra_bytes is specified, it will include those
@@ -538,6 +540,8 @@ namespace libtorrent
 		}
 		bool has_country() const { return m_country[0] != 0; }
 #endif
+
+		int outstanding_bytes() const { return m_outstanding_bytes; }
 
 		int send_buffer_size() const
 		{ return m_send_buffer.size(); }
